--- a/my_page.html
+++ b/my_page.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<img src="https://github.com/bv42/swwamidnyaa_first_birthday/blob/master/img/img1.png" alt="Swwamidnyaa's 1st Birthday" >
+<img src="https://raw.githubusercontent.com/bv42/swwamidnyaa_first_birthday/master/img/img1.png" alt="Swwamidnyaa's 1st Birthday" >
 </body>
 </html>
