--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<img src="https://raw.githubusercontent.com/bv42/swwamidnyaa_first_birthday/master/img/img1.png" alt="Swwamidnyaa's 1st Birthday" >
+<img src="https://raw.githubusercontent.com/bv42/swwamidnyaa_first_birthday/master/img/img1.png" style="width: 100%;" alt="Swwamidnyaa's 1st Birthday" >
 </body>
 </html>
